[package]
name = "numbers-guy"
description = "📈 a little CLI for fetching release and release asset data from GitHub"
homepage = "https://github.com/axodotdev/numbers-guy"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/axodotdev/numbers-guy"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
dotenvy = "0.15.7"
octocrab = "0.39.0"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["rt", "macros", "rt-multi-thread"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.20.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = true
# A GitHub repo to push Homebrew formulas to
tap = "axodotdev/homebrew-tap"
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
